Fixed hero text color on dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,7 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+.hero {
+  color: rgb(255, 255, 255);
+}
